force-app/main/default/objects/Neighborhood_Introduction_Article__c/Neighborhood_Introduction_Article__c.object-meta.xml
<CustomObject>
    <label>Neighborhood Introduction Article</label>
    <nameField>
        <label>Neighborhood Introduction Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Neighborhood Introduction Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>