force-app/main/default/objects/Neighborhood_Introduction_Article__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>Image</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>