force-app/main/default/objects/Neighborhood_Introduction_Article__c/fields/neighborhood_introduction__c.field-meta.xml
<CustomField>
    <fullName>neighborhood_introduction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Neighborhood Introduction</label>
    <referenceTo>Neighborhood_Introduction__c</referenceTo>
    <relationshipLabel>Neighborhood Introduction Articles</relationshipLabel>
    <relationshipName>Neighborhood_Introduction_Articles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>