force-app/main/default/objects/Neighborhood_Introduction_Article__c/fields/sub_introduction__c.field-meta.xml
<CustomField>
    <fullName>sub_introduction__c</fullName>
    <label>Sub Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>